--- a/styles/style.css
+++ b/styles/style.css
@@ -33,6 +33,7 @@ h1 {
     font-weight: 400;
     color: #F9FAF8;
     width: 350px;
+    font-weight: bolder;
 }
 
 nav {
@@ -48,7 +49,8 @@ li {
 
 #hero-1 {
     display: inline-block;
-    margin: 200px 200px;
+    margin: 150px 200px;
+    padding-bottom: 80px;
 }
 
 #hero-1 p {
@@ -102,4 +104,28 @@ a:hover {
 
 main {
     margin: 0 200px;
+}
+
+.tag1 {
+    text-align: center;
+    margin-top: 40px;
+    padding: 20px 0;
+    font-size: 36px;
+    color: #1f2937;
+    font-weight: bold;
+}
+
+
+.boxes-cards {
+    display: flex;
+    gap: 8px;
+}
+
+
+.box {
+    border: 3px solid #3882F6;
+    border-radius: 12px;
+    padding: 50px;
+    height: 50px;
+    width: 50px;
 }
