--- a/styles/style.css
+++ b/styles/style.css
@@ -117,10 +117,11 @@ main {
 
 
 .boxes-cards {
+    margin-top: 50px;
     display: flex;
-    
+    justify-content: center;
+    gap: 100px;
 }
-
 
 .box {
     border: 3px solid #3882F6;
@@ -128,4 +129,16 @@ main {
     padding: 50px;
     height: 50px;
     width: 50px;
+}
+
+.box-text {
+    display: flex;
+    justify-content: center;
+    gap: 100px;
+}
+
+.text {
+    border: 3px solid black;
+    width: 100px;
+
 }
