--- a/styles/style.css
+++ b/styles/style.css
@@ -81,7 +81,7 @@ li {
     position: relative;
     bottom: 60px;
     left: 155px;
-    background-color: grey;
+    background-color: #C3C3C3;
     padding: 150px 200px
 }
 
@@ -120,7 +120,7 @@ main {
     margin-top: 50px;
     display: flex;
     justify-content: center;
-    gap: 100px;
+    gap: 150px;
 }
 
 .box {
@@ -134,11 +134,32 @@ main {
 .box-text {
     display: flex;
     justify-content: center;
-    gap: 100px;
+    gap: 157px;
+    margin-top: 10px;
+    margin-bottom: 100px;
 }
 
 .text {
-    border: 3px solid black;
-    width: 100px;
+    width: 150px;
+    text-align: center;
+}
 
+article {
+    background-color: #C3C3C3;
+}
+
+article p {
+    font-size: 36px;
+    margin: 0 25%;
+    width: 50%;
+    padding: 10% 0;
+}
+
+.author {
+    float: right;
+    padding-top: 20px;
+}
+
+.call-action {
+    
 }
